--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
-    <link href="lib/all.css" rel="stylesheet">
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/styles.css" rel="stylesheet">
-    <script src="https://use.fontawesome.com/8219a6466a.js"></script>
+    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.5.0/css/all.css' crossorigin='anonymous'>
+
 </head>
 
 <body>
@@ -157,10 +157,10 @@
                 <div class="col-sm-5 social">
                     <ul>
                         <li>
-                            <a href="https://github.com/chadwtkns" target="_blank"><i class="fas fa-github" aria-hidden="true"></i></a>
+                            <a href="https://github.com/chadwtkns" target="_blank"><i class="fab fa-github" aria-hidden="true"></i></a>
                         </li>
                         <li>
-                            <a href="https://www.linkedin.com/in/chad-watkins-7460a851/" target="_blank"><i class="fas fa-linkedin" aria-hidden="true"></i></a>
+                            <a href="https://www.linkedin.com/in/chad-watkins-7460a851/" target="_blank"><i class="fab fa-linkedin" aria-hidden="true"></i></a>
                         </li>
                     </ul>
                 </div>
@@ -168,8 +168,9 @@
         </div>
     </footer>
     <!-- End footer -->
-
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script
+    src="https://code.jquery.com/jquery-3.5.0.min.js"
+    crossorigin="anonymous"></script>
     <script src="js/scripts.min.js"></script>
 </body>
 
